--- a/src/BotCoinTeacher/packages.config
+++ b/src/BotCoinTeacher/packages.config
@@ -1,7 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Accord" version="3.7.2-alpha" targetFramework="net461" />
-  <package id="Accord.Genetic" version="3.7.2-alpha" targetFramework="net461" />
-  <package id="Accord.Math" version="3.7.2-alpha" targetFramework="net461" />
-  <package id="Accord.Neuro" version="3.7.2-alpha" targetFramework="net461" />
+  <package id="Accord" version="3.7.0" targetFramework="net461" />
+  <package id="Accord.Genetic" version="3.7.0" targetFramework="net461" />
+  <package id="Accord.MachineLearning" version="3.7.0" targetFramework="net461" />
+  <package id="Accord.Math" version="3.7.0" targetFramework="net461" />
+  <package id="Accord.Neuro" version="3.7.0" targetFramework="net461" />
+  <package id="Accord.Statistics" version="3.7.0" targetFramework="net461" />
 </packages>
