--- a/src/BotCoinTeacher/packages.config
+++ b/src/BotCoinTeacher/packages.config
@@ -6,4 +6,6 @@
   <package id="Accord.Math" version="3.7.0" targetFramework="net461" />
   <package id="Accord.Neuro" version="3.7.0" targetFramework="net461" />
   <package id="Accord.Statistics" version="3.7.0" targetFramework="net461" />
+  <package id="EventStore.Client" version="4.0.2" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net461" />
 </packages>
